--- a/build.gradle
+++ b/build.gradle
@@ -18,6 +18,16 @@ repositories {
 	}
 }
 
+if (hasProperty("release")) {
+	version = [ "git", "describe", "--match", "[0-9]*", "--dirty"].execute().text.trim()
+} else {
+	version = [ "git", "describe", "--match", "[0-9]*", "--abbrev=0"].execute().text.trim() + "-SNAPSHOT"
+}
+
+task version << {
+	println "Version: ${version}"
+}
+
 apply plugin: 'scala'
 apply plugin: 'idea'
 apply plugin: 'maven'
@@ -26,7 +36,6 @@ apply plugin: org.scoverage.ScoveragePlugin
 def scalaVersion = "2.11.5"
 
 group = 'com.prezi.haskell'
-version = '0.1'
 
 dependencies {
 	compile gradleApi()
