--- a/build.gradle
+++ b/build.gradle
@@ -54,10 +54,9 @@ dependencies {
     // Required only for the incubating stuff brought over from Gradle 2.0
     compile "commons-lang:commons-lang:2.6"
 
-    testCompile group: "org.specs2", name: "specs2_2.11", version: "3.0"
-    testCompile group: "org.specs2", name: "specs2-core_2.11", version: "3.0"
-    testCompile group: "org.specs2", name: "specs2-mock_2.11", version: "3.0"
-    testCompile group: "org.specs2", name: "specs2-junit_2.11", version: "3.0"
+    testCompile group: "org.specs2", name: "specs2-core_2.11", version: "3.6.5"
+    testCompile group: "org.specs2", name: "specs2-mock_2.11", version: "3.6.5"
+    testCompile group: "org.specs2", name: "specs2-junit_2.11", version: "3.6.5"
 
     scoverage 'org.scoverage:scalac-scoverage-plugin_2.11:1.0.4'
     scoverage 'org.scoverage:scalac-scoverage-runtime_2.11:1.0.4'
@@ -167,6 +166,15 @@ artifacts {
     archives sourcesJar
 }
 
+sourceSets {
+    systest {
+        scala.srcDir file('src/systest/scala')
+        resources.srcDir file('src/systest/resources')
+        compileClasspath = sourceSets.main.output + configurations.testCompile
+        runtimeClasspath = output + compileClasspath
+    }
+}
+
 task integTestBundle {
     dependsOn jar
 
@@ -191,7 +199,34 @@ task integTestBundle {
     }
 }
 
+test {
+    testLogging.showStandardStreams = true
+    systemProperty "specs2.commandline", "console"
+}
+
+task systest(type: Test) {
+    dependsOn integTestBundle
+    include "**/systests/**"
+    testClassesDir = sourceSets.systest.output.classesDir
+    classpath += sourceSets.systest.runtimeClasspath
+
+    systemProperty "test-projects-dir", "$projectDir/src/test-projects"
+
+    reports {
+        html {
+            destination = "$buildDir/reports/systests"
+        }
+
+        junitXml {
+            destination = "$buildDir/reports/systests"
+        }
+    }
+
+    testLogging.showStandardStreams = true
+}
 
 task wrapper(type: Wrapper) {
     gradleVersion = '2.4'
 }
+
+check.dependsOn systest
