Determining executable mode after the plugin is applied

--- a/src/test-projects/test1/app/build.gradle
+++ b/src/test-projects/test1/app/build.gradle
@@ -3,3 +3,6 @@ dependencies {
 	main project(path: ":lib1", configuration: "main")
 	main project(path: ":lib2", configuration: "main")
 }
+
+haskell.isExecutable = true
+
